@@ -1,4 +1,4 @@
-/* $Id: fromtape.c,v 1.7.2.3.2.7 2010/02/17 10:13:33 uehira Exp $ */
+/* $Id: fromtape.c,v 1.7.2.3.2.8 2010/02/18 07:05:31 uehira Exp $ */
 /*
   program "fromtape.c"
   12/10/90 - 12/13/90, 9/19/91, 10/30/91, 6/19/92  urabe
@@ -36,20 +36,20 @@
 
 #define   DEBUG1    0
 #define   N_FILE    30
-#define   TRY_LIMIT 16
+/* #define   TRY_LIMIT 16 */  /* moved to winlib.h */
 #define   NAMLEN    256
 #define   MAXSIZE   2000000
 #define   SIZE_WBUF 600000
 /* #define   SR_MON    5 */
 /* #define   MAX_SR    1024 */
 
-#define   TIME1   "9005151102"  /* 10 m / fm before this time */
-#define   TIME2   "9005161000"  /* no fms before this time */
+/* #define   TIME1   "9005151102" */  /* 10 m / fm before this time */
+/* #define   TIME2   "9005161000" */  /* no fms before this time */
                     /* 60 m / fm after this time */
-#define   TIME3   "9008031718"  /* 10 m / fm after this time */
+/* #define   TIME3   "9008031718" */  /* 10 m / fm after this time */
 
 static char rcsid[] =
-  "$Id: fromtape.c,v 1.7.2.3.2.7 2010/02/17 10:13:33 uehira Exp $";
+  "$Id: fromtape.c,v 1.7.2.3.2.8 2010/02/18 07:05:31 uehira Exp $";
 
 static uint8_w wbuf[SIZE_WBUF],buf[MAXSIZE];
 static int fd_exb,dec_start[6],dec_end[6],min_reserve,
@@ -61,47 +61,13 @@ static char name_file[NAMLEN],path_raw[NAMLEN],path_mon[NAMLEN],
 /* int32_w buf_raw[MAX_SR],buf_mon[SR_MON][2]; */
 static FILE *fp,*f_mon,*f_raw;
 
-/* moved to winlib.h */
-/*  int e_ch[241]={
-    0x0000,0x0001,0x0002,0x0003,0x0004,0x0005,0x0006,0x0007,
-    0x0008,0x0009,0x000A,0x000B,0x000C,0x000D,0x000E,0x000F,
-    0x0010,0x0011,0x0012,0x0013,0x0014,0x0015,0x0016,0x0017,
-    0x0018,0x0019,0x001A,0x001B,0x001C,0x001D,0x001E,0x001F,
-    0x0020,0x0021,0x0022,0x0023,0x0024,0x0025,0x0026,0x0027,
-    0x0028,0x0029,0x002A,0x002B,0x002C,0x002D,0x002E,0x002F,
-    0x0030,0x0031,0x0032,0x0033,0x0034,0x0035,0x0036,0x0037,
-    0x0038,0x0039,0x003A,0x003B,0x003C,0x003D,0x003E,0x003F,
-    0x0040,0x0041,0x0042,0x0043,0x0044,0x0045,0x0046,0x0047,
-    0x0048,0x0049,0x004A,0x004B,0x004C,0x004D,0x004E,0x004F,
-    0x0050,0x0051,0x0052,0x0053,0x0054,0x0055,0x0056,0x0057,
-    0x0058,0x0059,0x005A,0x005B,0x005C,0x005D,0x005E,0x005F,
-    0x0060,0x0061,0x0062,0x0063,0x0064,0x0065,0x0066,0x0067,
-    0x0068,0x0069,0x006A,0x006B,0x006C,0x006D,0x006E,0x006F,
-    0x0070,0x0071,0x0072,0x0073,0x0074,0x0075,0x0076,0x0077,
-    0x0078,0x0079,0x007A,0x007B,0x007C,0x007D,0x007E,0x007F,
-    0x0080,0x0081,0x0082,0x0083,0x0084,0x0085,0x0086,0x0087,
-    0x0088,0x0089,0x008A,0x008B,0x008C,0x008D,0x008E,0x008F,
-    0x0090,0x0091,0x0092,0x0093,0x0094,0x0095,0x0096,0x0097,
-    0x0098,0x0099,0x009A,0x009B,0x009C,0x009D,0x009E,0x009F,
-    0x00A0,0x00A1,0x00A2,0x00A3,0x00A4,0x00A5,0x00A6,0x00A7,
-    0x00A8,0x00A9,0x00AA,0x00AB,0x00AC,0x00AD,0x00AE,0x00AF,
-    0x00B0,0x00B1,0x00B2,0x00B3,0x00B4,0x00B5,0x00B6,0x00B7,
-    0x00B8,0x00B9,0x00BA,0x00BB,0x00BC,0x00BD,0x00BE,0x00BF,
-    0x00C0,0x00C1,0x00C2,0x00C3,0x00C4,0x00C5,0x00C6,0x00C7,
-    0x00C8,0x00C9,0x00CA,0x00CB,0x00CC,0x00CD,0x00CE,0x00CF,
-    0x00D0,0x00D1,0x00D2,0x00D3,0x00D4,0x00D5,0x00D6,0x00D7,
-    0x00D8,0x00D9,0x00DA,0x00DB,0x00DC,0x00DD,0x00DE,0x00DF,
-    0x00E5,0x00E6,0x00E7,0x00E8,0x00E9,0x00EA,0x00EB,0x00EC,
-    0x00ED,0x00EE,0x00EF,0x00F0,0x00F1,0x00F2,0x00F3,0x00F4,
-    0x00F5};*/
-
 /* prototypes */
 static void end_process(int);
 static void print_usage(void);
-static int mt_pos(int, int);
+/* static int mt_pos(int, int, int); */  /* moved to winlib.c */
 static void get_pos(void);
 static void change_file(int, int, int);
-static int read_exb(void);
+/* static int read_exb(void); */   /* moved to winlib.c */
 int main(int, char *[]);
 
 static void
@@ -187,7 +153,8 @@ main(int argc, char *argv[])
 
   f_mon=f_raw=NULL;
   /* read one block */
-  read_exb();
+  if (read_exb1(exb_name, fd_exb, buf, sizeof(buf)) < 0)
+    end_process(1);
   bcd_dec(dec_now,buf+4);
   printf("\r%02x%02x%02x %02x%02x%02x  %5d",buf[4],buf[5],
     buf[6],buf[7],buf[8],buf[9],mkuint4(buf));
@@ -254,7 +221,8 @@ main(int argc, char *argv[])
 /*      printf(" %d>MON\n",mkuint4(wbuf));*/
       }
     if(time_cmp(dec_now,dec_end,6)==0) break;
-    read_exb();
+    if (read_exb1(exb_name, fd_exb, buf, sizeof(buf)) < 0)
+      end_process(1);
     bcd_dec(dec_now,buf+4);
     printf("\r%02x%02x%02x %02x%02x%02x  %5d",buf[4],buf[5],
       buf[6],buf[7],buf[8],buf[9],mkuint4(buf));
@@ -262,56 +230,6 @@ main(int argc, char *argv[])
     if(time_cmp(dec_now,dec_end,6)>0) break;
     }
   end_process(0);
-  }
-
-static int
-mt_pos(int fmc, int blc)
-  {
-  struct mtop exb_param;
-  int re;
-
-  re=0;
-  if(fmc)
-    {
-    if(fmc>0)
-      {
-      exb_param.mt_op=MTFSF;
-      exb_param.mt_count=fmc;
-      }
-    else
-      {
-      exb_param.mt_op=MTBSF;
-      exb_param.mt_count=(-fmc);
-      }
-    if((re=ioctl(fd_exb,MTIOCTOP,(char *)&exb_param))==-1)
-      {
-      perror("error in space fms");
-      printf("processing continues ... ");
-      fflush(stdout);
-      return (re);
-      }
-    }
-  if(blc)
-    {
-    if(blc>0)
-      {
-      exb_param.mt_op=MTFSR;
-      exb_param.mt_count=blc;
-      }
-    else
-      {
-      exb_param.mt_op=MTBSR;
-      exb_param.mt_count=(-blc);
-      }
-    if((re=ioctl(fd_exb,MTIOCTOP,(char *)&exb_param))==-1)
-      {
-      perror("error in space records");
-      printf("processing continues ... ");
-      fflush(stdout);
-      return (re);
-      }
-    }
-  return (re);
   }
 
 static void
@@ -390,9 +308,10 @@ get_pos()
     bl_count_last=bl_count;
     printf(" skipping %d fms and %d blks ...",fm_count,bl_count);
     fflush(stdout);
-    mt_pos(fm_count,bl_count);    /* positioning */
+    mt_pos(fm_count,bl_count,fd_exb);    /* positioning */
     printf("\n");
-    read_exb();           /* read one block */
+    if (read_exb1(exb_name, fd_exb, buf, sizeof(buf)) <0)  /* read one block */
+      end_process(1);
     bcd_dec(dec_now,buf+4);
     printf("\r%02x%02x%02x %02x%02x%02x  %5d",buf[4],buf[5],
       buf[6],buf[7],buf[8],buf[9],mkuint4(buf));
@@ -499,51 +418,52 @@ change_file(int argc, int max_file, int handshake)
     }
   }
 
-static int
-read_exb()
-  {
-  int cnt,blocking,dec[6];
-  ssize_t re;
-  uint32_w  size;
-  uint8_w *ptr;
+/* static int */
+/* read_exb() */
+/*   { */
+/*   int cnt,blocking,dec[6]; */
+/*   ssize_t re; */
+/*   uint32_w  size; */
+/*   uint8_w *ptr; */
 
-  cnt=0;
-  while(1)
-    {
-    while((re=read(fd_exb,buf,MAXSIZE))==0)
-      { /* file mark */
-      close(fd_exb);
-      if((fd_exb=open(exb_name,O_RDONLY))==-1)
-        {
-        perror("exabyte unit cannot open : ");
-        exit(1);
-        }
-      }
-    if(re>0)
-      {
-      blocking=1;
-      size=mkuint4(buf);
-      /* if(size<0) continue; */  /* nonsense! */
-      if(bcd_dec(dec,buf+4)==0) continue;
-#if DEBUG
-      printf("(%ld/%u)",re,size);
-#endif
-      ptr=buf;
-      while(size>re)
-        {
-        re=read(fd_exb,ptr+=re,size-=re);
-        blocking++;
-#if DEBUG
-        printf("(%ld/%u)",re,size);
-#endif
-        }
-      if(re>0) break;
-      }
-    /* error */
-    perror("exabyte");
-    cnt++;
-    if(cnt==TRY_LIMIT/2) mt_pos(-2,0); /* overrun ? */
-    else if(cnt==TRY_LIMIT) end_process(1);
-    }
-  return (blocking);
-  }
+/*   cnt=0; */
+/*   while(1) */
+/*     { */
+/*     while((re=read(fd_exb,buf,MAXSIZE))==0) */
+/*       { /\* file mark *\/ */
+/*       close(fd_exb); */
+/*       if((fd_exb=open(exb_name,O_RDONLY))==-1) */
+/*         { */
+/*         perror("exabyte unit cannot open : "); */
+/*         exit(1); */
+/*         } */
+/*       } */
+/*     if(re>0) */
+/*       { */
+/*       blocking=1; */
+/*       size=mkuint4(buf); */
+/*       /\* if(size<0) continue; *\/  /\* nonsense! *\/ */
+/*       if(bcd_dec(dec,buf+4)==0) continue; */
+/* #if DEBUG */
+/*       printf("(%ld/%u)",re,size); */
+/* #endif */
+/*       ptr=buf; */
+/*       while(size>re) */
+/*         { */
+/*         re=read(fd_exb,ptr+=re,size-=re); */
+/*         blocking++; */
+/* #if DEBUG */
+/*         printf("(%ld/%u)",re,size); */
+/* #endif */
+/*         } */
+/*       if(re>0) break; */
+/*       } */
+/*     /\* error *\/ */
+/*     perror("exabyte"); */
+/*     cnt++; */
+/*     if(cnt==TRY_LIMIT/2) mt_pos(-2,0,fd_exb); /\* overrun ? *\/ */
+/*     else if(cnt==TRY_LIMIT) end_process(1); */
+/*     } */
+/*   return (blocking); */
+/*   } */
+
